# template-ml-bentoml

./: README.md
tests/integration/: test_api.py
tests/unit/: test_model_runnable.py
{{ cookiecutter.project_name }}/: .flake8  .gitignore  Makefile  README.md  pyproject.toml
{{ cookiecutter.project_name }}/app/: bentofile.yaml  configuration.yaml  openAPI.md  service.py
{{ cookiecutter.project_name }}/tests/integration/: test_api.py
{{ cookiecutter.project_name }}/tests/unit/: test_model_runnable.py
